# rag-openai-api-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
data/sample/: learning_manifesto.md
notebooks/: 01_rag_workflow_openai_vector_stores.ipynb
src/rag_openai_api_workflow/: cli.py  client.py  config.py  documents.py  generation.py  storage.py  vector_store.py
tests/: test_cli.py  test_config.py  test_documents.py  test_generation.py  test_ingest.py  test_retrieval.py  test_storage.py  test_vector_store.py
