[project]
name = "rag-openai-api-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dakouri Kobri", email = "dakouri.m.kobri@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rag-openai-api-workflow = "rag_openai_api_workflow:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
